# UFO_Screenshot

./: README.md
source/: CMakeLists.txt  IMPORTANT.txt
source/cmake_scripts/: copy_resources.cmake
source/internal_libraries/: CMakeLists.txt
source/internal_libraries/lib_app_theme/: CMakeLists.txt
source/internal_libraries/lib_app_theme/include/: app_theme.hpp
source/internal_libraries/lib_image_editor/: CMakeLists.txt
source/internal_libraries/lib_image_editor/include/: screenshot.hpp
source/internal_libraries/lib_image_editor/src/: screenshot.cpp
source/internal_libraries/lib_screenshot/include/: screenshot.hpp
source/internal_libraries/lib_screenshot/src/: screenshot.cpp
source/internal_libraries/main/include/: main.hpp
source/internal_libraries/main/src/: main.cpp
source/resources/json/: Credit.txt  placeholder.json
source/resources/json/themes/theme_ufo/: ufo_dark.json  ufo_light.json
source/resources/qml/: main.qml
source/resources/qml/components_custom/: UFO_FullScreen.qml  UFO_RoundProgressBar.qml  UFO_ScreenItem.qml  UFO_SelectionArea.qml  UFO_SelectionCircle.qml
source/resources/qml/components_ufo/: UFO_Button.qml  UFO_ComboBox.qml  UFO_GroupBox.qml  UFO_Menu.qml  UFO_MenuBar.qml  UFO_MenuBarItem.qml  UFO_MenuItem.qml  UFO_MenuItemArrow.qml  UFO_MenuItemIndicator.qml  UFO_MenuSeparator.qml  UFO_Page.qml  UFO_SideBar.qml  UFO_SideBarButton.qml  UFO_SideBarSeparator.qml  UFO_StatusBar.qml  UFO_TextField.qml
source/resources/qml/pages/: UFO_About.qml  UFO_Settings.qml  UFO_Snipp.qml
